--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./public/css/style.css" />
+    <link rel="stylesheet" href="public/css/style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -38,7 +38,7 @@
           <div class="boussole box">
             <div class="compass">
               <img
-                src="/public/img/compass-arrow.png"
+                src="public/img/compass-arrow.png"
                 class="arrow" id="arrow"
                 alt="fleche de compas"
               />
@@ -67,6 +67,6 @@
         </div>
       </div>
     </div>
-    <script src="./public/js/script.js" defer></script>
+    <script src="public/js/script.js" defer></script>
   </body>
 </html>
